# Cardo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  cardo-menu.command  cardo.py  ci.yml  commands.md  installation.md  pyproject.toml  safety.md
.github/workflows/: ci.yml
docs/: design-notes.md
tests/: conftest.py  test_behaviour.py  test_smoke.py
